# jira-api

./: .gitignore  Cargo.toml  README.md
docs/: AppPropertiesApi.md  ApplicationRole.md  ApplicationRolesApi.md  AuditRecordBean.md  AuditRecordsApi.md  AvatarsApi.md  BulkCreateCustomFieldOptionRequest.md  BulkIssuePropertyUpdateRequest.md  BulkPermissionsRequestBean.md  Comment.md  Component.md  ComponentWithIssueCount.md  ConnectWorkflowTransitionRule.md  ContainerForWebhookIDs.md  CustomFieldDefinitionJsonBean.md  CustomFieldOptionDetails.md  CustomFieldOptionValue.md  Dashboard.md  DashboardRequest.md  DashboardsApi.md  DynamicModulesApi.md  EntityProperty.md  EventNotification.md  Field.md  FieldConfigurationItem.md  FieldMetadata.md  FieldReferenceData.md  FieldUpdateOperation.md  Fields.md  Filter.md  FilterSharingApi.md  FiltersApi.md  FoundFilter.md  FoundGroup.md  FunctionOperand.md  Group.md  GroupAndUserPickerApi.md  GroupName.md  GroupsApi.md  Hierarchy.md  (+139 more)
src/: lib.rs
src/apis/: app_properties_api.rs  application_roles_api.rs  audit_records_api.rs  avatars_api.rs  client.rs  configuration.rs  dashboards_api.rs  dynamic_modules_api.rs  filter_sharing_api.rs  filters_api.rs  group_and_user_picker_api.rs  groups_api.rs  issue_attachments_api.rs  issue_comment_properties_api.rs  issue_comments_api.rs  issue_custom_field_options_api.rs  issue_custom_field_options_apps_api.rs  issue_field_configurations_api.rs  issue_fields_api.rs  issue_link_types_api.rs  issue_links_api.rs  issue_navigator_settings_api.rs  issue_notification_schemes_api.rs  issue_search_api.rs  (+48 more)
(+209 files in other folders)
