[package]
name = "jira-api"
version = "0.0.1"
authors = ["spadavala@atlassian.com"]
repository = "https://github.com/spadaval/jira-api"
description = "Bindings for the Jira Cloud API."
license = "MIT License"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "1.5"
reqwest = "~0.9"

[dev-dependencies]
